--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,3 +24,6 @@ Issues = "https://github.com/never-over/modguard/issues"
 [build-system]
 requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
+
+[project.scripts]
+modguard = "modguard.cli:execute"
