--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -30,5 +30,5 @@ jobs:
     - name: Publish package
       uses: pypa/gh-action-pypi-publish@27b31702a0e7fc50959f5ad993c78deac1bdfc29
       with:
-        user: $${{ secrets.PYPI_USER_TOKEN }}
+        user: __token__
         password: ${{ secrets.PYPI_API_TOKEN }}
