--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,7 +1,7 @@
 # This workflow will install Python dependencies, run tests and lint with a variety of Python versions
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
 
-name: Python package
+name: ci
 
 on:
   push:
@@ -16,7 +16,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.9", "3.10", "3.11"]
+        python-version: ["3.7", "3.8", "3.9", "3.10", "3.11", "3.12"]
 
     steps:
     - uses: actions/checkout@v3
@@ -27,7 +27,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install ruff pytest pytest-mock
+        python -m pip install ruff pytest pytest-mock coverage
     - name: Lint with ruff
       run: |
         # Ignore unused imports as they are needed to test modguard
@@ -35,8 +35,11 @@ jobs:
     - name: Test with pytest
       run: |
         cd tests
-        pytest
+        coverage run --branch -m pytest
         cd ..
+    - name: Report coverage
+      run: |
+        coverage report
     - name: Check modguard
       run: |
         pip install .
