--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,7 +28,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install ruff pytest pytest-mock coverage
-    - name: Lint with ruff
+    - name: Check ruff
       run: |
         # Ignore unused imports as they are needed to test modguard
         ruff check --ignore F401
