--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,11 @@ Homepage = "https://github.com/never-over/modguard"
 Issues = "https://github.com/never-over/modguard/issues"
 
 
+[tool.pyright]
+include = ["modguard"]
+exclude = ["**/__pycache__"]
+
+
 [build-system]
 requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
