Enable strict pyright check, fix all type hints, enable pyright check in CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,7 +38,9 @@ jobs:
         coverage run --branch --source=../ -m pytest
         coverage report
         cd ..
-   
+    - name: Check types with pyright
+      run: |
+        pyright .
     - name: Check modguard
       run: |
         pip install .
