--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,2 +1,6 @@
 # yaml-language-server: $schema=https://squidfunk.github.io/mkdocs-material/schema.json
 site_name: Modguard Documentation
+theme:
+  name: material
+  features:
+    - navigation.instant
