Add API docs, syntax highlighting config

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -16,3 +16,11 @@ theme:
     - navigation.sections
     - navigation.tracking
     - toc.follow
+markdown_extensions:
+  - pymdownx.highlight:
+      anchor_linenums: true
+      line_spans: __span
+      pygments_lang_class: true
+  - pymdownx.inlinehilite
+  - pymdownx.snippets
+  - pymdownx.superfences
