--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,11 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install ruff pytest pytest-mock coverage pyright
+        python -m pip install uv
+        uv venv
+        source .venv/bin/activate
+        uv pip install -r dev-requirements.txt
+        uv pip install -e .
     - name: Check ruff
       run: |
         ruff check .
