--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,8 @@ classifiers = [
 ]
 keywords = ['python', 'module', 'guard', 'enforcement', 'enforcer', 'decorator', 'subclass', 'domain', 'architecture']
 dependencies = [
-    "pydantic==2.5.3"
+    "pydantic==2.5.3",
+    "stdlib-list==0.10.0"
 ]
 
 [project.urls]
