ignore_hidden_paths=ignore_hidden_paths,❌

--- a/modguard.yml
+++ b/modguard.yml
@@ -1,4 +1,5 @@
 ignore: ['tests/', 'docs/', '.github', '.venv']
+ignore_hidden_paths: true
 constraints:
   scope:root:
     depends_on: ['scope:core', 'scope:filesystem', 'scope:parsing', 'scope:utils']
