--- a/tests/example/valid/modguard.yml
+++ b/tests/example/valid/modguard.yml
@@ -1,8 +1,8 @@
-exclude: ["domain_three"]
+exclude: ["domain_thr.*"]
 constraints:
   one:
     depends_on: ["two"]
   two:
     depends_on: ["one"]
-  shared:
+  three:
     depends_on: []
