--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
-name = "modguard"
-version = "0.7.1"
+name = "tach"
+version = "0.1.0"
 authors = [
   { name="Caelean Barnes", email="caeleanb@gmail.com" },
   { name="Evan Doyle", email="evanmdoyle@gmail.com" },
@@ -33,18 +33,18 @@ keywords = ['python', 'module', 'package', 'guard', 'enforcement', 'boundary', '
 
 
 [project.urls]
-Homepage = "https://github.com/never-over/modguard"
-Issues = "https://github.com/never-over/modguard/issues"
+Homepage = "https://github.com/never-over/tach"
+Issues = "https://github.com/never-over/tach/issues"
 
 
 [tool.pyright]
-include = ["modguard"]
+include = ["tach"]
 exclude = ["**/__pycache__", ".venv"]
-strict = ["modguard"]
+strict = ["tach"]
 
 [build-system]
 requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
 
 [project.scripts]
-modguard = "modguard.cli:main"
+tach = "tach.cli:main"
