--- a/tach.yml
+++ b/tach.yml
@@ -1,4 +1,18 @@
-constraints: {}
+constraints:
+  scope:filesystem:
+    depends_on:
+    - scope:utils
+  scope:parsing:
+    depends_on:
+    - scope:core
+    - scope:filesystem
+  scope:root:
+    depends_on:
+    - scope:utils
+    - scope:core
+    - scope:filesystem
+    - scope:parsing
+    - loading
 exclude:
 - tests/
 - docs/
