--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,11 @@ include = ["tach"]
 exclude = ["**/__pycache__", ".venv"]
 strict = ["tach"]
 
+[tool.setuptools.packages.find]
+where = ["."]
+include = ["tach*"]
+namespaces = false
+
 [build-system]
 requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
