--- a/tach.yml
+++ b/tach.yml
@@ -1,18 +1,18 @@
 constraints:
-  scope:filesystem:
-    depends_on:
-    - scope:utils
-  scope:parsing:
-    depends_on:
-    - scope:core
-    - scope:filesystem
-  scope:root:
-    depends_on:
-    - scope:utils
-    - scope:core
-    - scope:filesystem
-    - scope:parsing
-    - loading
+- tag: scope:filesystem
+  depends_on:
+  - scope:utils
+- tag: scope:parsing
+  depends_on:
+  - scope:core
+  - scope:filesystem
+  - scope:utils
+- tag: scope:root
+  depends_on:
+  - scope:utils
+  - scope:core
+  - scope:filesystem
+  - scope:parsing
 exclude:
 - tests/
 - docs/
