--- a/tests/example/invalid/hidden/tach.yml
+++ b/tests/example/invalid/hidden/tach.yml
@@ -1,6 +1,9 @@
-exclude_hidden_paths: false
 constraints:
-  unhidden:
-    depends_on: []
-  hidden:
-    depends_on: []
+- tag: unhidden
+  depends_on: []
+- tag: hidden
+  depends_on: []
+exclude:
+- tests
+- docs
+exclude_hidden_paths: false
