--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,8 @@ classifiers = [
 dependencies = [
     "pyyaml==6.0.1",
     "pydantic==2.7.1",
-    "stdlib-list==0.10.0"
+    "stdlib-list==0.10.0",
+    "toml==0.10.2; python_version <= '3.11'"
 ]
 keywords = ['python', 'module', 'package', 'guard', 'enforcement', 'boundary', 'enforcer', 'domain', 'architecture']
 
