--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -2,5 +2,6 @@
   name: tach
   description: Validate package dependencies
   entry: tach check
+  args: ["--root"]
   language: python
   pass_filenames: false
