--- a/tach.yml
+++ b/tach.yml
@@ -9,12 +9,13 @@ constraints:
   - scope:utils
 - tag: scope:root
   depends_on:
-  - scope:utils
   - scope:core
   - scope:filesystem
   - scope:parsing
+  - scope:utils
 exclude:
 - tests/
 - docs/
 - build/
 exclude_hidden_paths: true
+ignore_type_checking_imports: false
