--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,9 @@ classifiers = [
 dependencies = [
     "pyyaml==6.0.1",
     "pydantic==2.7.1",
-    "stdlib-list==0.10.0"
+    "stdlib-list==0.10.0",
+    "rich==13.7.1",
+    "prompt-toolkit==3.0.43"
 ]
 keywords = ['python', 'module', 'package', 'guard', 'enforcement', 'boundary', 'enforcer', 'domain', 'architecture']
 
