--- a/tach.yml
+++ b/tach.yml
@@ -2,6 +2,7 @@ constraints:
 - tag: scope:filesystem
   depends_on:
   - scope:utils
+  - scope:hooks
 - tag: scope:interactive
   depends_on:
   - scope:filesystem
@@ -18,12 +19,15 @@ constraints:
   - scope:interactive
   - scope:parsing
   - scope:utils
+- tag: scope:hooks
+  depends_on:
+  - scope:utils
 exclude:
-- .*__pycache__/
-- tests/
 - build/
-- docs/
 - dist/
+- tests/
+- docs/
 - tach.egg-info/
+- .*__pycache__/
 exclude_hidden_paths: true
 ignore_type_checking_imports: false
