Update docs and metadata Never-Over -> gauge-sh

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,8 +1,8 @@
 # yaml-language-server: $schema=https://squidfunk.github.io/mkdocs-material/schema.json
 site_name: Tach
-site_url: https://never-over.github.io/tach/
+site_url: https://gauge-sh.github.io/tach/
 repo_name: tach
-repo_url: https://github.com/Never-Over/tach
+repo_url: https://github.com/gauge-sh/tach
 nav:
   - index.md
   - why-tach.md
