--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,8 +35,8 @@ keywords = ['python', 'module', 'package', 'guard', 'enforcement', 'boundary', '
 
 
 [project.urls]
-Homepage = "https://github.com/never-over/tach"
-Issues = "https://github.com/never-over/tach/issues"
+Homepage = "https://github.com/gauge-sh/tach"
+Issues = "https://github.com/gauge-sh/tach/issues"
 
 
 [tool.pyright]
