--- a/python/tach.yml
+++ b/python/tach.yml
@@ -1,7 +1,4 @@
 constraints:
-- tag: scope:cache
-  depends_on:
-  - scope:filesystem
 - tag: scope:filesystem
   depends_on:
   - scope:hooks
@@ -13,10 +10,6 @@ constraints:
   depends_on:
   - scope:filesystem
   - scope:utils
-- tag: scope:logging
-  depends_on:
-  - scope:cache
-  - scope:parsing
 - tag: scope:parsing
   depends_on:
   - scope:core
@@ -27,14 +20,14 @@ constraints:
   - scope:core
   - scope:filesystem
   - scope:interactive
-  - scope:logging
   - scope:parsing
   - scope:utils
 exclude:
-- tests/
-- .*__pycache__/
 - tach.egg-info/
-- dist/
 - build/
 - docs/
-exact: true
+- dist/
+- .*__pycache__/
+- tests/
+exclude_hidden_paths: true
+ignore_type_checking_imports: false
