--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,8 +36,8 @@ jobs:
       run: |
         source .venv/bin/activate
         cd python
-        ruff check .
-        ruff format --check .
+        ruff check
+        ruff format --check
     - name: Test with pytest and report coverage
       run: |
         source .venv/bin/activate
@@ -48,7 +48,7 @@ jobs:
       run: |
         source .venv/bin/activate
         cd python
-        pyright .
+        pyright
     - name: Check tach
       run: |
         tach check --root python
