Change pyright, ruff configuration to run from python root

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -60,12 +60,15 @@ runtime-evaluated-decorators = [
 exempt-modules = ["typing", "typing_extensions"]
 
 [tool.pyright]
-include = ["python/tach"]
+include = ["python/python/tach"]
 exclude = ["**/__pycache__", ".venv"]
 strict = ["python/tach"]
 executionEnvironments = [
   { root = "python" }
 ]
+
+[tool.ruff]
+src = ["python"]
 pythonVersion = "3.8"
 
 [build-system]
