--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,7 +5,7 @@ name: ci
 
 on:
   push:
-    branches: [ "main", "rust-extension" ]
+    branches: [ "main" ]
   pull_request:
     branches: [ "main", "docs" ]
 
