--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,4 @@ crate-type = ["cdylib"]
 [dependencies]
 pyo3 = "0.20.0"
 rustpython-parser = "0.3.1"
+rustpython-ast = { version = "0.3.1", features = ["visitor"] }
