--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,5 @@ crate-type = ["cdylib"]
 pyo3 = "0.20.0"
 rustpython-parser = "0.3.1"
 rustpython-ast = { version = "0.3.1", features = ["visitor"] }
+regex = "1.10.4"
+once_cell = "1.19.0"
