--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,14 @@ rustpython-parser = "0.3.1"
 rustpython-ast = { version = "0.3.1", features = ["visitor"] }
 regex = "1.10.4"
 once_cell = "1.19.0"
+
+[features]
+extension-module = ["pyo3/extension-module"]
+default = ["extension-module"]
+
+[dev-dependencies]
+criterion = { version = "0.5.1", features = ["html_reports"] }
+
+[[bench]]
+name = "get_project_imports"
+harness = false
