--- a/python/tach.yml
+++ b/python/tach.yml
@@ -23,11 +23,12 @@ constraints:
   - scope:parsing
   - scope:utils
 exclude:
+- tests/
+- docs/
+- .*__pycache__/
 - tach.egg-info/
 - build/
-- docs/
 - dist/
-- .*__pycache__/
-- tests/
-exclude_hidden_paths: true
+exact: false
+disable_logging: false
 ignore_type_checking_imports: false
