--- a/python/tach.yml
+++ b/python/tach.yml
@@ -1,4 +1,7 @@
 constraints:
+- tag: scope:cache
+  depends_on:
+  - scope:filesystem
 - tag: scope:filesystem
   depends_on:
   - scope:hooks
@@ -10,6 +13,10 @@ constraints:
   depends_on:
   - scope:filesystem
   - scope:utils
+- tag: scope:logging
+  depends_on:
+  - scope:cache
+  - scope:parsing
 - tag: scope:parsing
   depends_on:
   - scope:core
@@ -20,15 +27,16 @@ constraints:
   - scope:core
   - scope:filesystem
   - scope:interactive
+  - scope:logging
   - scope:parsing
   - scope:utils
 exclude:
-- tests/
 - docs/
 - .*__pycache__/
-- tach.egg-info/
+- tests/
 - build/
+- tach.egg-info/
 - dist/
-exact: false
+exact: true
 disable_logging: false
 ignore_type_checking_imports: false
