--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [lib]
 name = "tach"
-crate-type = ["cdylib"]
+crate-type = ["cdylib", "lib"]
 bench = false
 
 [dependencies]
