--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,7 @@ Issues = "https://github.com/gauge-sh/tach/issues"
 
 [tool.ruff]
 src = ["python"]
+exclude = ["crates"]
 target-version = "py38"
 lint.extend-select = ["I", "TCH"]
 
