--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,9 +28,9 @@ classifiers = [
 dependencies = [
     "pyyaml==6.0.1",
     "pydantic==2.7.1",
-    "stdlib-list==0.10.0",
     "rich==13.7.1",
     "prompt-toolkit==3.0.43",
+    "stdlib-list==0.10.0; python_version < '3.10'",
     "eval-type-backport==0.2.0",
 ]
 keywords = ['python', 'module', 'package', 'guard', 'enforcement', 'boundary', 'enforcer', 'domain', 'architecture']
