--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,7 +48,7 @@ jobs:
       run: |
         source .venv/bin/activate
         cd python
-        pyright
+        pyright --pythonversion ${{ matrix.python-version }}
     - name: Check tach
       run: |
         source .venv/bin/activate
