--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,6 +50,11 @@ jobs:
         source .venv/bin/activate
         cd python
         pyright --pythonversion ${{ matrix.python-version }}
+    - name: Test vscode lsp server with nox
+      run: |
+        source .venv/bin/activate
+        cd lsp/vscode
+        nox --session tests
     - name: Check tach
       run: |
         source .venv/bin/activate
