force workflow availabitility

--- a/.github/workflows/publish_vscode.yml
+++ b/.github/workflows/publish_vscode.yml
@@ -2,7 +2,7 @@ name: publish_vscode
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "main", "lsp-support" ]
   pull_request:
     branches: [ "main", "docs" ]
 
