update gh yaml syntax

--- a/.github/workflows/publish_vscode.yml
+++ b/.github/workflows/publish_vscode.yml
@@ -2,10 +2,9 @@ name: publish_vscode
 
 on:
   push:
-    branches: [ "main", "lsp-support" ]
+    branches: [ "main" ]
   pull_request:
     branches: [ "main", "docs" ]
-
 
 jobs:
   # Phase 1: Build the extension on all platforms.
