--- a/.github/workflows/publish_vscode.yml
+++ b/.github/workflows/publish_vscode.yml
@@ -61,11 +61,13 @@ jobs:
           python-version: "3.x"
       - uses: dtolnay/rust-toolchain@stable
       # ARM builds on macOS, which should select Tach's universal binary.
-      - run: arch -arm64 python -m pip install -t ./bundled/libs --implementation py --no-deps --upgrade -r ./requirements.txt
+      - run: arch -arm64 python -m pip install -t ./bundled/libs --no-cache-dir --implementation py --no-deps --upgrade -r ./requirements.txt
+
         if: ${{ startsWith(matrix.os, 'macos') && startsWith(matrix.target, 'aarch64') }}
 
       # x86_64 builds on macOS, which should select Tach's x86_64 binary.
-      - run: arch -x86_64 python -m pip install -t ./bundled/libs --implementation py --no-deps --upgrade -r ./requirements.txt
+      - run: arch -x86_64 python -m pip install -t ./bundled/libs --no-cache-dir --implementation py --no-deps --upgrade -r ./requirements.txt
+
         if: ${{ startsWith(matrix.os, 'macos') && startsWith(matrix.target, 'x86_64') }}
 
       # ARM builds on Ubuntu, which should select Tach's ARM binary.
@@ -90,10 +92,12 @@ jobs:
         if: ${{ startsWith(matrix.os, 'ubuntu') && endsWith(matrix.target, 'musl') }}
         run: |
           apk add --no-cache python3 py3-pip
-          python3 -m pip install -t ./bundled/libs --implementation py --no-deps --upgrade -r ./requirements.txt
+          python3 -m pip install -t ./bundled/libs --no-cache-dir --implementation py --no-deps --upgrade -r ./requirements.txt
+
 
       # Every other architecture, which should defer to `pip` without any special treatment.
-      - run: python -m pip install -t ./bundled/libs --implementation py --no-deps --upgrade -r ./requirements.txt
+      - run: python -m pip install -t ./bundled/libs --no-cache-dir --implementation py --no-deps --upgrade -r ./requirements.txt
+
         if: ${{ !startsWith(matrix.os, 'macos')
           && !(startsWith(matrix.os, 'ubuntu') && !startsWith(matrix.target, 'x86_64') && !endsWith(matrix.target, 'musl'))
           && !(startsWith(matrix.os, 'ubuntu') && endsWith(matrix.target, 'musl')) }}
